# Loganalyzer

./: .gitignore  LICENSE  README.md  analyzer.py  mcp_config.json  mcp_config_2.json  pyproject.toml  requirement.txt  streamlit_client.py  streamlit_ui.py  temp.json
Test logs/: comprehensive_logs.json  test_db_logs.json  test_mem_logs.json
