[project]
name = "loganalyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.17",
    "langchain-google-genai>=2.1.8",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "mcp[cli]>=1.12.2",
    "nest-asyncio>=1.6.0",
    "openai>=1.97.1",
    "streamlit>=1.47.0",
]
